--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="index.html"><img src="/Bilder/Mein_Logo.png" alt="Pringles x Apple Logo"></a>
         </div>
         <div class="burger">
-            <img src="/Bilder/Icons/Burger.png" alt="Burger Menü Icon">
+            <img src="/LastTry/Bilder/Icons/Burger.png" alt="Burger Menü Icon">
             <a class="produkte" href="#produkte">UNSERE PRODUKTE</a>
             <a class="marke" href="#marke">UNSERE MARKE</a>
             <a class="kontakt" href="#kontakt">KONTAKT</a>
