--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="/Bilder/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Bilder/favicon.png" type="image/x-icon">
     <title>Pringles x Apple</title>
 </head>
 
 <body>
     <div class="header">
         <div class="logo">
-            <a href="index.html"><img src="/Bilder/Mein_Logo.png" alt="Pringles x Apple Logo"></a>
+            <a href="index.html"><img src="Bilder/Mein_Logo.png" alt="Pringles x Apple Logo"></a>
         </div>
         <div class="burger">
             <img src="Bilder/Icons/Burger.png" alt="Burger Menü Icon">
@@ -23,10 +23,10 @@
             <a class="kontakt" href="#kontakt">KONTAKT</a>
         </div>
         <div class="interaktion">
-            <a class="suche" href="suche"><img id="suche" src="/Bilder/Icons/Search.png" alt="Seite durchsuche"></a>
-            <a class="konto" href="konto.html"><img id="konto" src="/Bilder/Icons/User.png"
-                    alt="Pringles Konto anmelden"> </a>
-            <a class="sprache" href="sprache"><img id="sprache" src="/Bilder/Icons/Globe.png" alt="Choose Language"></a>
+            <a class="suche" href="suche"><img id="suche" src="Bilder/Icons/Search.png" alt="Seite durchsuche"></a>
+            <a class="konto" href="konto.html"><img id="konto" src="Bilder/Icons/User.png"
+            alt="Pringles Konto anmelden"> </a>
+            <a class="sprache" href="sprache"><img id="sprache" src="Bilder/Icons/Globe.png" alt="Choose Language"></a>
         </div>
     </div>
     <div class="parent">
@@ -44,8 +44,8 @@
             </button>
         </div>
         <div class="rechts">
-            <img class="wolke" src="/Bilder/AppleWolke_Trans.png" alt="Eine plüschige Apfel Wolke">
-            <img class="packungen" src="/Bilder/Pringles_Packungen.png" alt="Die Pringles M1 Pro, M1 Max und M1 Ultra">
+            <img class="wolke" src="Bilder/AppleWolke_Trans.png" alt="Eine plüschige Apfel Wolke">
+            <img class="packungen" src="Bilder/Pringles_Packungen.png" alt="Die Pringles M1 Pro, M1 Max und M1 Ultra">
         </div>
         <div class="yellowSpace">
 
@@ -70,79 +70,79 @@
 
         <div class="skala">
             <div class="intelDiv">
-                <img src="/Bilder/Intel.png" alt="Ein Schwacher Intel-Chip" class="intel">
+                <img src="Bilder/Intel.png" alt="Ein Schwacher Intel-Chip" class="intel">
             </div>
             <div class="pro">
                 <div class="bounce-in-top">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Pro_Verzerrt.png" alt="">
 
                 </div>
             </div>
             <div class="max">
                 <div class="bounce-in-top">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Max_Verzerrt.png" alt="">
                 </div>
             </div>
             <div class="ultra">
                 <div class="bounce-in-top">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
-                    <img src="/Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
+                    <img src="Bilder/M1_Ultra_Verzerrt.png" alt="">
                 </div>
             </div>
         </div>
@@ -163,7 +163,7 @@
             <button>DATEN LEAKEN</button>
         </div>
         <div class="meme">
-            <img src="/Bilder/TimCookImChipsRand.png" alt="">
+            <img src="Bilder/TimCookImChipsRand.png" alt="">
         </div>
     </div>
     <div class="footer">
